@@ -45,11 +45,15 @@ to make up the file names that are to be used.
 File encoding is supported.  The encoding scheme of the source files,
 destination files and the bundle files can be specified.
 
-Destination files can be exlicitly overwritten using the
+Destination files can be explicitly overwritten using the
 <var>forceoverwrite</var> attribute.  If <var>forceoverwrite</var>
 is false, the destination file is overwritten only if either the
 source file or any of the files that make up the bundle have been
 modified after the destination file was last modified.
+</p>
+<p>
+<em>New in Ant 1.6:</em><br/>
+Line endings of source files are preserved in the translated files.
 </p>
 <p><a href="../CoreTypes/fileset.html">FileSet</a>s are used to select files to
 translate.
@@ -157,7 +161,7 @@ equivalent using a resource bundle encoded in japanese.
   &lt;/translate&gt;
 </pre>
 <hr>
-<p align="center">Copyright &copy; 2001 Apache Software Foundation. All rights
+<p align="center">Copyright &copy; 2001-2003 Apache Software Foundation. All rights
 Reserved.</p>
 </body>
 </html>
